Feat. Add JPA Test Configuration and test code

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
   jpa:
     properties:
       hibernate:
-        # Query log를 MySql버전으로 표시 https://docs.jboss.org/hibernate/orm/5.4/javadocs/org/hibernate/dialect/package-summary.html, https://055055.tistory.com/83
+        # How to display Query log (MySql): https://docs.jboss.org/hibernate/orm/5.4/javadocs/org/hibernate/dialect/package-summary.html, https://055055.tistory.com/83
         dialect : org.hibernate.dialect.PostgreSQL10Dialect
       ddl-auto: none
     open-in-view: false
